--- a/site002/index.html
+++ b/site002/index.html
@@ -14,11 +14,30 @@
         </Header>
         <nav>
             <a href="#">Menu</a>
-            <a href="#">Menu</a>
+            <a href="#">About</a>
+            <a href="#">News</a>
+            <a href="#">Support</a>
         </nav>
         <main>
             <article>
-                
+                <h1>Formas de evoluir no Albion Online</h1>
+                <h2>Coletando Recursos</h2>
+                <p>Você pode escolher em qual coleta seguir, quanto maior seu nivel mais você prata ganha. <br> Aqui estão todas as coletas que você pode escolher para seguir:  &nbsp; &nbsp;<div>Dica 💡<p id="dica">Foque apenas em uma coleta</p></p></div>
+                <ol>
+                    <li>Coleta de madeira</li>
+                    <li>Coleta de minério</li>
+                    <li>Coleta de pedra</li>
+                    <li>Coleta de pelego</li>
+                    <li>Coleta de fibra</li>
+                    <li>Coleta de pesca</li>
+                </ol>
+                <h2>Fazendo masmorras de grupo, ou masmorras solo</h2>
+                <img src="img/dungeon.png" alt="Imagem de uma masmorra solo">
+                <p>Em cada masmorra solo ou em grupo, ao derrotar os chefes, você pode abrir baús de recompensa. Existe baús comuns, raros, epicos e lendário, quanto maior o nivel do baú mais itens raros você pode conseguir.</p>
+                <h2>Derrotando monstros no mundo aberto</h2>
+                <img src="img/openword.png" alt="Imagem de monstros do mundo aberto">
+                <p>Dessa maneira você ganha prata dropada no chão pelos monstros e a chance de dropar itens raros. Além de ganhar muita fama para upar seus equipamentos.</p>
+                <h2></h2>
                 <aside>
                     
                 </aside>
