--- a/site002/index.html
+++ b/site002/index.html
@@ -37,14 +37,13 @@
                 <h2>Derrotando monstros no mundo aberto</h2>
                 <img src="img/openword.png" alt="Imagem de monstros do mundo aberto">
                 <p>Dessa maneira você ganha prata dropada no chão pelos monstros e a chance de dropar itens raros. Além de ganhar muita fama para upar seus equipamentos.</p>
-                <h2></h2>
-                <aside>
-                    
-                </aside>
+                <h2>Fazendo caçadas</h2>
+                <img src="img/caçada.png" alt="Imagem de Caçada">
+                <p>Nesse conteúdo você compra um kit de rastreio e sai para o mundo aberto para derrotar feras e ter a chance e dropas itens dessas feras bem valiosos. Por ser um conteúdo novo em Albion, ele se tornou bem remunerado, mas perigoso.</p>
             </article>
         </main>
         <footer>
-
+            <p>Criado por <a href="https://github.com/fernandoferreirapires" target="_blank">Luis Fernando</a></p>
         </footer>
     </body>
 </html>
