--- a/site002/index.html
+++ b/site002/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="estilos/main.css">
         <meta charset="UTF-8">
-        <title></title>
+        <title>Inicio no Albion Online</title>
     </head>
     <body>
         <Header>
