--- a/flix/index.html
+++ b/flix/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/flix/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flix</title>
@@ -14,9 +14,9 @@
 
         <h2 style="color: white; font-size: 2rem; ">Fernando e Alguém</h2>
 
-        <h3 style="font-size: 1.5rem; color: rgb(0, 255, 0); margin: 10px 0px 20px 0px;">Estreou em 15/11/2005 <img src="/flix/imagens/L.png" class="icon"><img src="/flix/imagens/HD.png" class="icon"></h3>
+        <h3 style="font-size: 1.5rem; color: rgb(0, 255, 0); margin: 10px 0px 20px 0px;">Estreou em 15/11/2005 <img src="imagens/L.png" class="icon"><img src="imagens/HD.png" class="icon"></h3>
 
-        <h2 style="font-weight: bolder; color: white; font-size: 1.8rem;"><img src="/flix/imagens/top10.png" style="width: 25px;
+        <h2 style="font-weight: bolder; color: white; font-size: 1.8rem;"><img src="imagens/top10.png" style="width: 25px;
         border-radius: 5px;"> Em alta no momento</h2>
 
         <p style="color: white; padding-bottom: 20px; width: 400px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam id, porro, accusamus reprehenderit dolores vero beatae alias laudantium et repudiandae officiis sapiente repellendus magni dicta veritatis. Dolorum deleniti maiores
@@ -35,16 +35,16 @@
         </section>
         <div>
             <section class="container-imagens">
-                <div class="imagens"><img src="/flix/imagens/HD.png" class="icon-hd"></div>
-                <div class="imagens"><img src="/flix/imagens/HD.png" class="icon-hd"></div>
+                <div class="imagens"><img src="imagens/HD.png" class="icon-hd"></div>
+                <div class="imagens"><img src="imagens/HD.png" class="icon-hd"></div>
             </section>
             <section class="container-imagens">
-                <div class="imagens"><img src="/flix/imagens/HD.png" class="icon-hd"></div>
-                <div class="imagens"><img src="/flix/imagens/HD.png" class="icon-hd"></div>
+                <div class="imagens"><img src="imagens/HD.png" class="icon-hd"></div>
+                <div class="imagens"><img src="imagens/HD.png" class="icon-hd"></div>
             </section>
             <section class="container-imagens">
-                <div class="imagens"><img src="/flix/imagens/HD.png" class="icon-hd"></div>
-                <div class="imagens"><img src="/flix/imagens/HD.png" class="icon-hd"></div>
+                <div class="imagens"><img src="imagens/HD.png" class="icon-hd"></div>
+                <div class="imagens"><img src="imagens/HD.png" class="icon-hd"></div>
             </section>
         </div>
     </main>
